# gtp-guard

./: Makefile  README.md  VERSION  meson.build
.github/workflows/: build-deb.yml
debian/: gtp-guard.service
doc/: qer-implementation.md  urr-implementation.md
lib/: addr.c  addr.h  command.c  command.h  inet_server.c  inet_server.h  inet_utils.c  inet_utils.h  ip_pool.c  ip_pool.h  logger.c  logger.h  meson.build  pkt_buffer.c  pkt_buffer.h  rt_table.c  thread.c  thread.h  utils.c  vty.c  vty.h  vty_gauge.c  vty_matrix.c  xpcapng.c  xpcapng.h
src/: gtp_apn.c  gtp_apn_vty.c  gtp_bpf.c  gtp_bpf_capture.c  gtp_bpf_fwd.c  gtp_bpf_ifrules.c  gtp_bpf_mape.c  gtp_bpf_mirror.c  gtp_bpf_ppp.c  gtp_bpf_prog.c  gtp_bpf_prog_vty.c  gtp_bpf_rt.c  gtp_bpf_xsk.c  gtp_cmd.c  gtp_conn.c  gtp_data.c  gtp_dpd.c  gtp_interface.c  gtp_interface_metrics.c  gtp_interface_rule.c  gtp_interface_vty.c  gtp_ip_pool.c  gtp_ip_pool_vty.c  gtp_metrics.c  gtp_mirror.c  gtp_mirror_vty.c  gtp_netlink.c  gtp_netlink_fs.c  gtp_proxy.c  gtp_proxy_hdl.c  gtp_proxy_hdl_v1.c  gtp_proxy_hdl_v2.c  gtp_proxy_vty.c  gtp_range_partition.c  gtp_range_partition_vty.c  gtp_request.c  gtp_resolv.c  gtp_router.c  gtp_router_hdl.c  gtp_router_vty.c  (+9 more)
src/bpf/: capture_trace.c  cgn.c  gtp.h  gtp_fwd.c  gtp_fwd_mirror.c  gtp_mirror.c  gtp_route.c  mape.c  meson.build  upf.c  upf_mape.c
src/bpf/lib/: capture-def.h  capture.h  cgn-def.h  cgn.h  gtp_fwd-def.h  gtp_fwd.h  gtp_mirror.h  gtpu.h  if_rule-def.h  if_rule-priv.h  if_rule.h  mape.h  tools.h  traf_acl-def.h  traf_acl.h  upf-def.h  upf.h  upf_ttc.h  upf_urr.h  xsk.h
src/carrier-grade-nat/: cdr_fwd.c  cdr_fwd_adj.c  cdr_fwd_disk.c  cdr_fwd_spool.c  cdr_fwd_vty.c  cgn.c  cgn_bpf.c  cgn_vty.c  compat.c  meson.build  traf_acl.c
src/carrier-grade-nat/include/: cdr_fwd-priv.h  cdr_fwd.h  cgn.h  compat.h
src/include/: gtp.h  gtp_apn.h  gtp_bpf_capture.h  gtp_bpf_fwd.h  gtp_bpf_ifrules.h  gtp_bpf_prog.h  gtp_bpf_rt.h  gtp_bpf_xsk.h  gtp_cmd.h  gtp_conn.h  gtp_data.h  gtp_guard.h  gtp_interface.h  gtp_interface_rule.h  gtp_ip_pool.h  gtp_mirror.h  gtp_netlink.h  gtp_proxy.h  gtp_proxy_hdl.h  gtp_proxy_hdl_v1.h  gtp_proxy_hdl_v2.h  gtp_resolv.h  gtp_router.h  gtp_router_hdl.h  gtp_server.h  gtp_teid.h  gtp_utils.h
src/pfcp/: meson.build  pfcp_assoc.c  pfcp_bpf.c  pfcp_ie.c  pfcp_msg.c  pfcp_proto_dump.c  pfcp_proto_hdl.c  pfcp_router.c  pfcp_router_vty.c  pfcp_server.c  pfcp_session.c  pfcp_session_ctx.c  pfcp_session_qer.c  pfcp_session_report.c  pfcp_session_urr.c  pfcp_session_vty.c  pfcp_teid.c  pfcp_utils.c
src/pfcp/include/: pfcp_bpf.h  pfcp_ie.h  pfcp_ie_group.h  pfcp_proto_dump.h  pfcp_proto_hdl.h  pfcp_router.h  pfcp_server.h  pfcp_session.h  pfcp_session_report.h  pfcp_teid.h  pfcp_utils.h
src/pppoe/: pppoe_session.c
src/pppoe/include/: pppoe_session.h
subprojects/packagefiles/libbpf/: get_version.sh
subprojects/packagefiles/libxdp/: get_version.sh
test/: _gtpg_cmd.sh  cgn.sh  gtp-proxy.sh  mape.sh  smf.py  upf.sh
test/conf/: upf-mape.conf  upf-smf.conf
tools/selftests/carrier-grade-nat/: main.c
tools/selftests/ip-pool/: main.c
tools/selftests/lib-thread/: main.c  meson.build
tools/selftests/libcdrfwd/: Makefile  cdr_test.c  cdrfwd_test  meson.build
tools/selftests/pGW-cdr/: main.c  meson.build
tools/selftests/resolv-naptr/: main.c  meson.build
